--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Prism-JS for DITA-OT
+site_name: Syntax highlighting for DITA-OT
 
 repo_url: https://github.com/jason-fox/fox.jason.unit-test
 repo_name: GitHub
