Update for release 1.0.0

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin id="fox.jason.prismjs">
+
+	<!--
+		Define package details.
+	-->
+	<feature extension="package.version" value="1.0.0"/>
   
+	<!-- HTML5 extension points -->   
+	<feature extension="dita.xsl.html5" value="xsl/xhtml.xsl" type="file"/>
 
-  <!-- HTML5 extension points -->   
-  <feature extension="dita.xsl.html5" value="xsl/xhtml.xsl" type="file"/>
-  
-  <!-- XHTML extension points -->
-  <feature extension="dita.xsl.xhtml" value="xsl/xhtml.xsl" type="file"/>
-  
-  <!-- PDF -->
-  <feature extension="dita.xsl.xslfo" value="xsl/xslfo.xsl" type="file"/>
+	<!-- XHTML extension points -->
+	<feature extension="dita.xsl.xhtml" value="xsl/xhtml.xsl" type="file"/>
+
+	<!-- PDF -->
+	<feature extension="dita.xsl.xslfo" value="xsl/xslfo.xsl" type="file"/>
 
 
-  <feature extension="depend.preprocess.post" value="prismjs"/>
-  <feature extension="ant.import" file="build_dita2prismjs.xml"/>
+	<feature extension="depend.preprocess.post" value="prismjs"/>
+	<feature extension="ant.import" file="build_dita2prismjs.xml"/>
 
-  <feature extension="dita.conductor.lib.import" file="lib/xmltask.jar"/>
+	<feature extension="dita.conductor.lib.import" file="lib/xmltask.jar"/>
 
 </plugin>
