--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,24 @@ language: java
 jdk:
   - oraclejdk8
 env:
-  - DITA_OT=3.2
-before_script:
+  - DITA_OT=3.3
+
+before_install:
   - zip -r fox.jason.prismjs.zip . -x *.zip* *.git/* *temp/* *out/*
   - curl -LO https://github.com/dita-ot/dita-ot/releases/download/$DITA_OT/dita-ot-$DITA_OT.zip
   - unzip -q dita-ot-$DITA_OT.zip
   - chmod +x dita-ot-$DITA_OT/bin/dita
+
+install:
   - dita-ot-$DITA_OT/bin/dita --install https://github.com/jason-fox/fox.jason.unit-test/archive/master.zip
   - dita-ot-$DITA_OT/bin/dita --install fox.jason.prismjs.zip
+
+before_script:
   - dita-ot-$DITA_OT/bin/dita --input dita-ot-$DITA_OT/plugins/fox.jason.prismjs -f xsl-instrument
 
 script:
   - dita-ot-$DITA_OT/bin/dita --input dita-ot-$DITA_OT/plugins/fox.jason.prismjs -f unit-test --output . -v
+
 after_success:
   - cp dita-ot-$DITA_OT/plugins/fox.jason.unit-test/resource/pom.xml pom.xml
   - mvn clean org.eluder.coveralls:coveralls-maven-plugin:report   
