--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 install:
   - dita-ot-$DITA_OT/bin/dita --install https://github.com/jason-fox/fox.jason.unit-test/archive/master.zip
   - dita-ot-$DITA_OT/bin/dita --install https://github.com/doctales/org.doctales.xmltask/archive/master.zip
-  - dita-ot-$DITA_OT/bin/dita --install https://github.com/jason-fox/extend.css/archive/master.zip
+  - dita-ot-$DITA_OT/bin/dita --install https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
   - dita-ot-$DITA_OT/bin/dita --install fox.jason.prismjs.zip
 
 before_script:
