--- a/plugin.xml
+++ b/plugin.xml
@@ -2,14 +2,16 @@
 <?xml-model href="dita-ot/plugin.rnc" type="application/relax-ng-compact-syntax"?>
 <plugin id="fox.jason.prismjs" version="2.1.0">
 	<feature extension="ant.import" file="process_prismjs.xml"/>
-	<!-- PDF -->
-	<feature extension="dita.xsl.xslfo" value="xsl/xslfo.xsl" type="file"/>
 	<!--
-		This plugin requires the XMLTask lib
+		This plugin requires the XMLTask lib and extended CSS
 	-->
 	<require plugin="org.doctales.xmltask"/>
 	<require plugin="fox.jason.extend.css"/>
-
+	
+	<!-- PDF extension point -->
+	<feature extension="dita.xsl.xslfo" value="xsl/xslfo.xsl" type="file"/>
+	<!-- Uses the default preprocess.post extension point -->
 	<feature extension="depend.preprocess.post" value="prismjs"/>
+	<!-- Uses the extended CSS extension point -->
 	<feature extension="extend.css.process" value="prismjs.css.copy"/>
 </plugin>
