--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Syntax highlighting for DITA-OT
 
-repo_url: https://github.com/jason-fox/fox.jason.unit-test
+repo_url: https://github.com/jason-fox/fox.jason.prismjs
 repo_name: GitHub
 
 pages:
