Narrow sonar focus

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=fox.jason.prismjs
 sonar.organization=dita-ot-plugins
-sonar.sources=. 
+sonar.sources=resource,cfg,xsl
 sonar.test.exclusions=test,sample
 sonar.host.url=https://sonarcloud.io
 sonar.flex.cobertura.reportPaths=coverage.xml
