--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ script:
   - dita-ot-$DITA_OT/bin/dita --input dita-ot-$DITA_OT/plugins/fox.jason.prismjs -f unit-test --output . -v
 
 after_success:
+  - mvn clean compile
   - cp dita-ot-$DITA_OT/plugins/fox.jason.unit-test/resource/pom.xml pom.xml
-  - mvn clean org.eluder.coveralls:coveralls-maven-plugin:report
+  - mvn org.eluder.coveralls:coveralls-maven-plugin:report
   - rm -rf dita-ot-$DITA_OT
   - sonar-scanner 
