--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,11 @@
 sonar.projectKey=fox.jason.prismjs
 sonar.organization=dita-ot-plugins
-sonar.sources=resource,cfg,xsl
-sonar.coverage.exclusions=resource
+sonar.sources=resource,cfg,xsl,src
+sonar.coverage.exclusions=resource,src
+sonar.java.binaries=target/classes/fox/jason/prismjs/tasks
+sonar.java.libraries=lib/ant-*.jar
 sonar.test.exclusions=test,sample
+sonar.cpd.exclusions=src/fox/jason/prismjs/tasks/**
 sonar.host.url=https://sonarcloud.io
 sonar.flex.cobertura.reportPaths=coverage.xml
 sonar.exclusions=coverage.html,test-results.html,pom.xml,coverage.xml
