--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.coverage.exclusions=resource,src
 sonar.java.binaries=target/classes/fox/jason/prismjs/tasks
 sonar.java.libraries=lib/ant-*.jar
 sonar.test.exclusions=test,sample
-sonar.cpd.exclusions=src/fox/jason/prismjs/tasks/**
+sonar.cpd.exclusions=src/fox/jason/prismjs/tasks/**,resource/**
 sonar.host.url=https://sonarcloud.io
 sonar.flex.cobertura.reportPaths=coverage.xml
 sonar.exclusions=coverage.html,test-results.html,pom.xml,coverage.xml
