--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,21 @@
 			<version>1.10.8</version>
 		</dependency>
 	</dependencies>
+
+	<properties>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>dita-ot-plugins</sonar.organization>
+		<sonar.projectKey>fox.jason.prismjs</sonar.projectKey>
+		<sonar.sources>resource,cfg,xsl,src</sonar.sources>
+		<sonar.coverage.exclusions>test,sample</sonar.coverage.exclusions>
+		<sonar.java.binaries>target/classes/fox/jason/prismjs/tasks</sonar.java.binaries>
+		<sonar.java.libraries>lib/ant-*.jar</sonar.java.libraries>
+		<sonar.test.exclusions>test</sonar.test.exclusions>
+		<sonar.cpd.exclusions>src/fox/jason/prismjs/tasks/**</sonar.cpd.exclusions>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.flex.cobertura.reportPaths>coverage.xml</sonar.flex.cobertura.reportPaths>
+		<sonar.exclusions>coverage.html,test-results.html,pom.xml,coverage.xml</sonar.exclusions>
+	</properties>
 	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -63,6 +78,20 @@
 				<configuration>
 					<outputDirectory>${basedir}/lib</outputDirectory>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.3.0.603</version>
+				<executions>
+					<execution>
+						<phase>verify</phase>
+						<goals>
+							<goal>sonar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
