--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fox.jason</groupId>
 	<artifactId>prismjs</artifactId>
-	<version>1.2</version>
+	<version>1.3</version>
 
 	<dependencies>
 		<dependency>
@@ -37,6 +37,7 @@
 				<configuration>
 					<filesets>
 						<fileset>
+							<directory>target</directory>
 							<directory>lib</directory>
 						</fileset>
 					</filesets>
