--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,10 @@
 site_name: Syntax highlighting for DITA-OT
-
-repo_url: https://github.com/jason-fox/fox.jason.prismjs
+repo_url: 'https://github.com/jason-fox/fox.jason.prismjs'
 repo_name: GitHub
-
-pages:
-    -  Home: index.md
-    - 'Install' : 'install.md'
-    - 'Usage' : 'usage.md'
-
+nav:
+  - Home: index.md
+  - Install: install.md
+  - Usage: usage.md
 theme: readthedocs
-extra_css: ["https://jason-fox.github.io/fox.jason.prismjs/dita.css"]
+extra_css:
+  - 'https://jason-fox.github.io/fox.jason.prismjs/dita.css'
