--- a/plugin.xml
+++ b/plugin.xml
@@ -17,4 +17,12 @@
 	<feature extension="depend.preprocess.post" value="prismjs"/>
 	<!-- Uses the extended CSS extension point -->
 	<feature extension="extend.css.process" value="prismjs.css.copy"/>
+
+
+	<transtype name="pdf" desc="PDF">
+    	<param name="prism.default" desc="Specifies the default Prism language" type="string"/>
+    </transtype>
+    <transtype name="base-html" abstract="true" desc="HTML-based output">
+    	<param name="prism.default" desc="Specifies the default Prism language" type="string"/>
+	</transtype>
 </plugin>
