--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fox.jason</groupId>
 	<artifactId>prismjs</artifactId>
@@ -19,13 +22,16 @@
 		<sonar.projectKey>fox.jason.prismjs</sonar.projectKey>
 		<sonar.sources>resource,cfg,xsl,src</sonar.sources>
 		<sonar.coverage.exclusions>test,sample</sonar.coverage.exclusions>
-		<sonar.java.binaries>target/classes/fox/jason/prismjs/tasks</sonar.java.binaries>
+		<sonar.java.binaries
+    >target/classes/fox/jason/prismjs/tasks</sonar.java.binaries>
 		<sonar.java.libraries>lib/ant-*.jar</sonar.java.libraries>
 		<sonar.test.exclusions>test</sonar.test.exclusions>
 		<sonar.cpd.exclusions>src/fox/jason/prismjs/tasks/**</sonar.cpd.exclusions>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.flex.cobertura.reportPaths>coverage.xml</sonar.flex.cobertura.reportPaths>
-		<sonar.exclusions>coverage.html,test-results.html,pom.xml,coverage.xml</sonar.exclusions>
+		<sonar.flex.cobertura.reportPaths
+    >coverage.xml</sonar.flex.cobertura.reportPaths>
+		<sonar.exclusions
+    >coverage.html,test-results.html,pom.xml,coverage.xml</sonar.exclusions>
 	</properties>
 	
 	<build>
