--- a/plugin.xml
+++ b/plugin.xml
@@ -28,8 +28,9 @@
     </transtype>
     <transtype name="base-html" abstract="true" desc="HTML-based output">
     	<param 
-    	name="prism.css.theme" 
-    	desc="Specifies the location of a prism .css color theme file relative to the output directory."type="string"
+    	name="prismjs.css.theme" 
+    	desc="Specifies the location of a prism .css color theme file relative to the output directory."
+    	type="string"
     />
     	<param
       name="prism.default"
