Amend parameter name

--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
     </transtype>
     <transtype name="base-html" abstract="true" desc="HTML-based output">
     	<param 
-    	name="prismjs.css.theme" 
+    	name="prism.css.theme" 
     	desc="Specifies the location of a prism .css color theme file relative to the output directory."
     	type="string"
     />
