--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,8 @@ jobs:
           prerequisites: fox.jason.extend.css
         env:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: test-results
+          path: test-results.html
