--- a/test/pdf/build.xml
+++ b/test/pdf/build.xml
@@ -2,7 +2,7 @@
 <project basedir="." default="unit-test">
 	<import file="../bootstrap.xml"/>
 	<description>
-		Expect that PDF codeblock text highlights syntax correctly
+		Expect that PDF codeblock text highlights SVG syntax correctly
 	</description>
 	<target description="" name="unit-test">
 		<exec-pdf/>
