--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,22 +14,22 @@ env:
         -Dmaven.wagon.httpconnectionManager.ttlSeconds=120
         
 jobs:
-  sonarcloud:
-    name: SonarCloud Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Git checkout
-        uses: actions/checkout@v3
-      - name: Use Java 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'zulu'
-      - name: SonarCloud Scan
-        uses: jason-fox/sonarcloud-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_CLOUD_LOGIN: ${{ secrets.SONAR_CLOUD_LOGIN }}
+  # sonarcloud:
+  #   name: SonarCloud Scan
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Git checkout
+  #       uses: actions/checkout@v3
+  #     - name: Use Java 17
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: 17
+  #         distribution: 'zulu'
+  #     - name: SonarCloud Scan
+  #       uses: jason-fox/sonarcloud-action@master
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         SONAR_CLOUD_LOGIN: ${{ secrets.SONAR_CLOUD_LOGIN }}
 
   unit-test:
     name: Unit Tests
